--- a/.github/workflows/devops_qualitas.yml
+++ b/.github/workflows/devops_qualitas.yml
@@ -33,14 +33,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: |
-            .next/
-            public/
-            package.json
-            package-lock.json
-            next.config.ts
-            postcss.config.mjs
-            tsconfig.json
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
