--- a/.github/workflows/devops_qualitas.yml
+++ b/.github/workflows/devops_qualitas.yml
@@ -23,17 +23,26 @@ jobs:
         with:
           node-version: '22.x'
 
-      - name: npm install, build, and test
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: latest
+
+      - name: Install dependencies and build
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+          pnpm install --frozen-lockfile
+          pnpm run build
+
+      - name: Copy static assets into standalone output
+        run: |
+          cp -r .next/static .next/standalone/.next/static
+          cp -r public .next/standalone/public
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: .next/standalone
 
   deploy:
     runs-on: ubuntu-latest
@@ -47,7 +56,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -62,4 +71,4 @@ jobs:
           app-name: 'qualitas'
           slot-name: 'Production'
           package: .
-          
+          startup-command: 'node server.js'
