--- a/.github/workflows/devops_qualitas.yml
+++ b/.github/workflows/devops_qualitas.yml
@@ -38,11 +38,16 @@ jobs:
           cp -r .next/static .next/standalone/.next/static
           cp -r public .next/standalone/public
 
+      - name: Zip standalone output
+        run: |
+          cd .next/standalone
+          zip -r ../../standalone.zip .
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .next/standalone
+          path: standalone.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -70,5 +75,5 @@ jobs:
         with:
           app-name: 'qualitas'
           slot-name: 'Production'
-          package: .
+          package: standalone.zip
           startup-command: 'node server.js'
